@@ -54,6 +54,8 @@ interface of LinuxSampler Control Protocol (LSCP) (http://www.linuxsampler.org).
 %dir %{_datadir}/icons/hicolor/scalable/mimetypes
 %dir %{_datadir}/%{name}
 %dir %{_datadir}/%{name}/translations
+#dir %{_datadir}/man
+#dir %{_datadir}/man/man1
 %{_bindir}/%{name}
 %{_datadir}/mime/packages/%{name}.xml
 %{_datadir}/applications/%{name}.desktop
@@ -62,6 +64,7 @@ interface of LinuxSampler Control Protocol (LSCP) (http://www.linuxsampler.org).
 %{_datadir}/icons/hicolor/scalable/apps/%{name}.svg
 %{_datadir}/icons/hicolor/scalable/mimetypes/application-x-%{name}*.svg
 %{_datadir}/%{name}/translations/%{name}_*.qm
+%{_datadir}/man/man1/%{name}.1.gz
 
 %changelog
 * Tue Dec 31 2013 Rui Nuno Capela <rncbc@rncbc.org> 0.2.3
